--- a/CFG_GIT-master/index.html
+++ b/CFG_GIT-master/index.html
@@ -4,6 +4,7 @@
  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>GIT & GIT HUB</title>
+  <title>First site</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Nunito+Sans|Raleway" rel="stylesheet">
 </head>
